# library-renderer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py
include/kdrt/renderer/: aabb.h  bvh.h  camera.h  color.h  dialectric.h  frame.h  hitrecord.h  hittable.h  hittable_list.h  interval.h  lambertian.h  material.h  metal.h  point3.h  ray.h  sphere.h  utils.h  vector3.h
src/: CMakeLists.txt  aabb.cpp  bvh.cpp  camera.cpp  color.cpp  dialectric.cpp  frame.cpp  hitrecord.cpp  hittable_list.cpp  interval.cpp  interval.h  lambertian.cpp  metal.cpp  point3.cpp  point3.h  ray.cpp  ray.h  sphere.cpp  vector3.cpp
tests/: CMakeLists.txt  color_tests.cpp  interval_tests.cpp  point3_tests.cpp  render_tests.cpp  test_data.h  vector3_tests.cpp
